Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </style>
 </head>
 <body>
-  <div class="title">Unico ShadowOps</div>
+  <div class="title">ShadowOps</div>
   <button id="installButton">
     <img src="jumpcloudlogo.jpg" alt="Jumpcloud Logo">
     Install Jumpcloud Application
